# odoo18addons

ac_coa_hierarchy/: __manifest__.py
ac_coa_hierarchy/controllers/: main.py
ac_coa_hierarchy/models/: account_account.py
ac_coa_hierarchy/views/: account_account_views.xml  menu.xml
ac_financial_reports/: __manifest__.py
ac_financial_reports/controllers/: export_controller.py
ac_financial_reports/models/: __init__.py  financial_report.py
ac_financial_reports/views/: menu.xml
account-analytic-18.0/: README.md
account-analytic-18.0/setup/_metapackage/: pyproject.toml
account_bill_project/: README.md  __manifest__.py
account_bill_project/views/: menus.xml  (+3 more)
account_move_analytic_link/: README.rst  __manifest__.py
advanced_accounting/: CHANGELOG.md  INSTALL.md  MODULE_INFO.txt  QUICKSTART.md  README.md  USER_GUIDE.md  __manifest__.py
alnas_clear_data/: README.md  __manifest__.py
bom_enhanced/: README.md  __manifest__.py
brodher/: __manifest__.py
brodher_product_serial/: __manifest__.py
currency_decimal_fix/: __manifest__.py  hooks.py
custom_batch_input/: __manifest__.py
pos_warehouse_access/: BUGFIX.md  CHANGELOG.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  STRUCTURE.md  __manifest__.py
product_serial_api/: LARAVEL_EXAMPLE.md  __manifest__.py
purchase_so_link/: README.md  __manifest__.py
server-tools/: README.md  requirements.txt
stock_batch_master/: __manifest__.py
stock_internal_approval/: __manifest__.py
woo_commerce_connector/: PANDUAN_PENGGUNAAN.txt  __manifest__.py
workcenter_custom_code/: README.md  __manifest__.py
(+264 files in other folders)
