[project]
name = "odoo-addons-oca-account-analytic"
version = "18.0.20251223.0"
dependencies = [
    "odoo-addon-account_analytic_distribution_manual==18.0.*",
    "odoo-addon-account_analytic_parent==18.0.*",
    "odoo-addon-account_analytic_required==18.0.*",
    "odoo-addon-account_analytic_sequence==18.0.*",
    "odoo-addon-account_analytic_spread_by_tag==18.0.*",
    "odoo-addon-account_analytic_tag==18.0.*",
    "odoo-addon-account_move_analytic_link==18.0.*",
    "odoo-addon-account_move_update_analytic==18.0.*",
    "odoo-addon-analytic_base_department==18.0.*",
    "odoo-addon-analytic_hr_department_restriction==18.0.*",
    "odoo-addon-hr_expense_analytic_tag==18.0.*",
    "odoo-addon-hr_timesheet_analytic_tag==18.0.*",
    "odoo-addon-pos_analytic_by_config==18.0.*",
    "odoo-addon-purchase_analytic==18.0.*",
    "odoo-addon-purchase_analytic_distribution_model_warehouse==18.0.*",
    "odoo-addon-purchase_analytic_tag==18.0.*",
    "odoo-addon-purchase_stock_analytic==18.0.*",
    "odoo-addon-sale_analytic_distribution_model_warehouse==18.0.*",
    "odoo-addon-sale_analytic_tag==18.0.*",
    "odoo-addon-stock_analytic==18.0.*",
    "odoo-addon-stock_landed_costs_analytic==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
